--- a/VoiceChanger/Base.lproj/Main.storyboard
+++ b/VoiceChanger/Base.lproj/Main.storyboard
@@ -33,7 +33,6 @@
                                 <state key="normal" image="Stop"/>
                                 <connections>
                                     <action selector="stop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tlx-I7-j5v"/>
-                                    <segue destination="6WS-Tu-0cj" kind="show" id="EQH-GZ-c89"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HV1-ib-l2A">
@@ -60,6 +59,7 @@
                         <outlet property="label" destination="HV1-ib-l2A" id="WPU-lG-zbf"/>
                         <outlet property="recordBtn" destination="JHf-mI-CgT" id="cEf-Rz-ntL"/>
                         <outlet property="stopBtn" destination="Bjy-9K-okb" id="AiJ-Au-ImA"/>
+                        <segue destination="6WS-Tu-0cj" kind="show" identifier="stopRecordingSegue" id="ViG-M3-3Lm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
