--- a/VoiceChanger/Base.lproj/Main.storyboard
+++ b/VoiceChanger/Base.lproj/Main.storyboard
@@ -75,54 +75,84 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="H2M-tA-bew">
-                                <rect key="frame" x="16" y="88" width="382" height="678"/>
+                                <rect key="frame" x="16" y="138" width="382" height="622"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="MX3-Dg-fMP">
-                                        <rect key="frame" x="0.0" y="0.0" width="382" height="226"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="207.5"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Udd-Xj-Sac" userLabel="Slow Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="191" height="226"/>
+                                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Udd-Xj-Sac" userLabel="Slow Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="191" height="207.5"/>
                                                 <state key="normal" image="Slow"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="imageView.contentMode">
+                                                        <integer key="value" value="1"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ECY-di-ZCw" userLabel="Fast Button">
-                                                <rect key="frame" x="191" y="0.0" width="191" height="226"/>
+                                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ECY-di-ZCw" userLabel="Fast Button">
+                                                <rect key="frame" x="191" y="0.0" width="191" height="207.5"/>
                                                 <state key="normal" image="Fast"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="imageView.contentMode">
+                                                        <integer key="value" value="1"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
                                             </button>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="aBg-dB-cbr">
-                                        <rect key="frame" x="0.0" y="226" width="382" height="226"/>
+                                        <rect key="frame" x="0.0" y="207.5" width="382" height="207"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kNK-eN-XvA" userLabel="High Pitch Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="191" height="226"/>
+                                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kNK-eN-XvA" userLabel="High Pitch Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="191" height="207"/>
                                                 <state key="normal" image="HighPitch"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="imageView.contentMode">
+                                                        <integer key="value" value="1"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CSg-A6-FX4" userLabel="Low Pitch Button">
-                                                <rect key="frame" x="191" y="0.0" width="191" height="226"/>
+                                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CSg-A6-FX4" userLabel="Low Pitch Button">
+                                                <rect key="frame" x="191" y="0.0" width="191" height="207"/>
                                                 <state key="normal" image="LowPitch"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="imageView.contentMode">
+                                                        <integer key="value" value="1"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
                                             </button>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="1iu-bE-ZIL">
-                                        <rect key="frame" x="0.0" y="452" width="382" height="226"/>
+                                        <rect key="frame" x="0.0" y="414.5" width="382" height="207.5"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZXU-fU-cE3" userLabel="Echo Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="191" height="226"/>
+                                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZXU-fU-cE3" userLabel="Echo Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="191" height="207.5"/>
                                                 <state key="normal" image="Echo"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="imageView.contentMode">
+                                                        <integer key="value" value="1"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lvh-3F-M6D" userLabel="Reverb Button">
-                                                <rect key="frame" x="191" y="0.0" width="191" height="226"/>
+                                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lvh-3F-M6D" userLabel="Reverb Button">
+                                                <rect key="frame" x="191" y="0.0" width="191" height="207.5"/>
                                                 <state key="normal" image="Reverb"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="imageView.contentMode">
+                                                        <integer key="value" value="1"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
                                             </button>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mog-AJ-SHv" userLabel="Stop Button">
-                                <rect key="frame" x="175" y="782" width="64" height="64"/>
+                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mog-AJ-SHv" userLabel="Stop Button">
+                                <rect key="frame" x="172" y="776" width="70" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="7uu-pp-FIF"/>
-                                    <constraint firstAttribute="width" constant="64" id="wVd-01-706"/>
+                                    <constraint firstAttribute="height" constant="70" id="7uu-pp-FIF"/>
+                                    <constraint firstAttribute="width" constant="70" id="wVd-01-706"/>
                                 </constraints>
                                 <state key="normal" image="Stop"/>
                             </button>
@@ -134,7 +164,7 @@
                             <constraint firstItem="mog-AJ-SHv" firstAttribute="top" secondItem="H2M-tA-bew" secondAttribute="bottom" constant="16" id="dNK-Mv-3Ta"/>
                             <constraint firstItem="bcf-S0-Am0" firstAttribute="bottom" secondItem="mog-AJ-SHv" secondAttribute="bottom" constant="16" id="uMm-b6-4nL"/>
                             <constraint firstItem="mog-AJ-SHv" firstAttribute="centerX" secondItem="KUD-1c-QeD" secondAttribute="centerX" id="urG-bT-qIS"/>
-                            <constraint firstItem="H2M-tA-bew" firstAttribute="top" secondItem="bcf-S0-Am0" secondAttribute="top" id="zqQ-F7-9NY"/>
+                            <constraint firstItem="H2M-tA-bew" firstAttribute="top" secondItem="bcf-S0-Am0" secondAttribute="top" constant="50" id="zqQ-F7-9NY"/>
                             <constraint firstItem="H2M-tA-bew" firstAttribute="leading" secondItem="bcf-S0-Am0" secondAttribute="leading" constant="16" id="zsn-LX-4lI"/>
                         </constraints>
                     </view>
